--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     padding: 20px;
 
     /* Metro-style background */
-    background: url('metro.jpg') no-repeat center center fixed;
+    background: url('background.png') no-repeat center center fixed;
     background-size: cover;
 
     /* Overlay to make content readable */
